--- a/css/style4.css
+++ b/css/style4.css
@@ -53,6 +53,10 @@ i, span {
     vertical-align: middle;
 }
 
+#btnTimNV{
+    cursor: pointer;
+}
+
 /* ---------------------------------------------------
     SIDEBAR STYLE
 ----------------------------------------------------- */
